apps/services/content-node-registry/provisioning/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: content-node-registry
  labels:
    app.kubernetes.io/name: content-node-registry
    app.kubernetes.io/part-of: wapps
